--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,9 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pytest>=8.4.2",
     "ruff>=0.13.2",
 ]
+
+[tool.pytest.ini_options]
+pythonpath = ["./src"]
